--- a/MyPhoneBook.Web/Views/MyPhoneBook/Index.cshtml
+++ b/MyPhoneBook.Web/Views/MyPhoneBook/Index.cshtml
@@ -21,8 +21,10 @@
             </tr>
         </thead>
         <tbody>
-            @foreach (var item in Model)
+            @if (Model != null)
             {
+                foreach (var item in Model)
+                {
                 <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.Id)
@@ -33,12 +35,12 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.CreatedDate)
                     </td>
-                    <td>
-                        @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                    <td>                        
                         @Html.ActionLink("Details", "Details", new { id = item.Id }) |
                         @Html.ActionLink("Delete", "Delete", new { id = item.Id })
                     </td>
                 </tr>
+                }
             }
         </tbody>
     </table>
